--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,13 +1,9 @@
 FROM node:4.3.0
 
-RUN useradd -m -s /bin/bash demo && mkdir -p /opt/app
+RUN mkdir -p /opt/app && cd /opt/app && npm install pg
 
 WORKDIR /opt/app
 
 COPY . /opt/app
-
-RUN cd /opt/app && npm install --save pg && chown -R demo:demo /opt/app
-
-USER demo
 
 CMD ["node", "./index.js"]
